--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@thirdweb-dev/react": "^3",
     "@thirdweb-dev/sdk": "^3",
+    "bootstrap": "^5.2.2",
     "ethers": "^5.6.8",
     "next": "^12.1.6",
     "npm": "^8.19.2",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
