--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@thirdweb-dev/react": "^3",
     "@thirdweb-dev/sdk": "^3",
+    "dotenv": "^16.0.3",
     "ethers": "^5.6.8",
-    "next": "^12.1.6",
+    "next": "^12.3.1",
     "npm": "^8.19.2",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "eslint": "8.11.0",
