--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "npm": "^8.19.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "eslint": "8.11.0",
