--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@thirdweb-dev/sdk": "^3",
     "bootstrap": "^5.2.2",
     "ethers": "^5.6.8",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0",
     "next": "^12.1.6",
     "npm": "^8.19.2",
     "react": "^18.1.0",
